--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -28,7 +28,7 @@
                     </form>
                     <div id="file-info" class="hidden">
                         <p>Selected file: <span id="file-name"></span></p>
-                        <button id="upload-button" class="primary-button">Upload</button>
+                        <p class="upload-status">Uploading automatically...</p>
                     </div>
                 </div>
                 
