--- a/web_app/templates/file_view.html
+++ b/web_app/templates/file_view.html
@@ -104,18 +104,9 @@
          data-video-generation='{{ file_status.get("video_generation_task", {}) | tojson | safe }}'>
     </div>
     
-    <script>
-        // Extract data from data attributes
-        var dataElement = document.getElementById('app-data');
-        var fileInfo = JSON.parse(dataElement.getAttribute('data-file-info'));
-        var beatDetectionTask = JSON.parse(dataElement.getAttribute('data-beat-detection'));
-        var videoGenerationTask = JSON.parse(dataElement.getAttribute('data-video-generation'));
-        
-        // Set global variables and log for debugging
-        window.initialFileData = fileInfo;
-        console.log('Beat Detection Task:', beatDetectionTask);
-        console.log('Video Generation Task:', videoGenerationTask);
-    </script>
+    <div id="debug-panel" class="debug-panel" style="display: none;"></div>
+    
+    <!-- Load JavaScript at the end of the body -->
     <script src="{{ url_for('static', path='/js/file_view.js') }}"></script>
 </body>
 </html>
