--- a/web_app/templates/file_view.html
+++ b/web_app/templates/file_view.html
@@ -95,14 +95,22 @@
         </footer>
     </div>
 
-    <!-- Pass data from backend to frontend using data attributes -->
-    <div id="app-data" 
-         data-file-info='{{ {"fileId": file_id, "status": file_status} | tojson | safe }}'
-         data-beat-detection='{{ file_status.get("beat_detection_task", {}) | tojson | safe }}'
-         data-video-generation='{{ file_status.get("video_generation_task", {}) | tojson | safe }}'>
-    </div>
+    <div id="debug-panel" class="debug-panel"></div>
     
-    <div id="debug-panel" class="debug-panel" style="display: none;"></div>
+    <!-- Pass data directly to JavaScript -->
+    <script>
+        // Create the data object on the server side and pass it as JSON
+        window.initialFileData = {{ {
+            "fileId": file_id,
+            "status": file_status.status,
+            "beatDetectionTaskId": file_status.beat_detection_task.id if file_status.beat_detection_task else "",
+            "videoGenerationTaskId": file_status.video_generation_task.id if file_status.video_generation_task else "",
+            "bpm": file_status.beat_stats.tempo_bpm if file_status.beat_stats else 0,
+            "totalBeats": file_status.beat_stats.total_beats if file_status.beat_stats else 0,
+            "duration": file_status.beat_stats.duration if file_status.beat_stats else 0,
+            "detectedMeter": file_status.beat_stats.detected_meter if file_status.beat_stats else 0
+        } | tojson | safe }};
+    </script>
     
     <!-- Load JavaScript at the end of the body -->
     <script src="{{ url_for('static', path='/js/file_view.js') }}"></script>
