--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -13,6 +13,15 @@
         <header>
             <h1>Beat Detection & Video Generator</h1>
             <p>Upload an audio file to detect beats and generate a visualization video</p>
+            <div class="navigation-links">
+                <a href="/processing_queue" class="nav-link">View Processing Queue</a>
+                {% if user %}
+                <span class="user-info">Welcome, {{ user.username }}</span>
+                <a href="/logout" class="nav-link">Logout</a>
+                {% else %}
+                <a href="/login" class="nav-link">Login</a>
+                {% endif %}
+            </div>
         </header>
 
         <main>
