--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -28,6 +28,7 @@
             <section id="upload-section" class="card">
                 <h2>Upload Audio</h2>
                 <p>Supported formats: MP3, WAV, FLAC, M4A, OGG</p>
+                <p>Maximum duration: 1 minute - files longer than 1 minute will be truncated</p>
                 
                 <div class="upload-area" id="drop-area">
                     <form id="upload-form" action="/upload" method="post" enctype="multipart/form-data">
