--- a/web_app/templates/index.html
+++ b/web_app/templates/index.html
@@ -68,15 +68,31 @@
                         </div>
                         <div class="result-item">
                             <h3>Total Beats</h3>
-                            <p id="result-total-beats" class="result-value">--</p>
+                            <div class="result-row">
+                                <div class="result-label">Total Beats:</div>
+                                <div id="result-total-beats" class="result-value">--</div>
+                            </div>
                         </div>
                         <div class="result-item">
-                            <h3>Duration</h3>
-                            <p id="result-duration" class="result-value">--</p>
+                            <h3>Beats per Bar</h3>
+                            <div class="result-row">
+                                <div class="result-label">Beats per Bar:</div>
+                                <div id="result-beats-per-bar" class="result-value">--</div>
+                            </div>
                         </div>
                         <div class="result-item">
-                            <h3>Time Signature</h3>
-                            <p id="result-meter" class="result-value">--</p>
+                            <h3>Tempo</h3>
+                            <div class="result-row">
+                                <div class="result-label">Tempo:</div>
+                                <div id="result-tempo" class="result-value">--</div>
+                            </div>
+                        </div>
+                        <div class="result-item">
+                            <h3>Irregularity</h3>
+                            <div class="result-row">
+                                <div class="result-label">Irregularity:</div>
+                                <div id="result-irregularity" class="result-value">--</div>
+                            </div>
                         </div>
                     </div>
                     
