fixed some display problems and saving metadata in changed directory

--- a/web_app/templates/file_view.html
+++ b/web_app/templates/file_view.html
@@ -136,11 +136,11 @@
     <div id="file-data" 
          data-file-id="{{ file_id }}"
          data-status="{{ file_status.status }}"
-         data-beat-detection-task-id="{{ file_status.beat_detection_task.id if file_status.beat_detection_task else '' }}"
-         data-video-generation-task-id="{{ file_status.video_generation_task.id if file_status.video_generation_task else '' }}"
+         data-beat-detection-task-id="{{ file_status.beat_detection if file_status.beat_detection else '' }}"
+         data-video-generation-task-id="{{ file_status.video_generation if file_status.video_generation else '' }}"
          data-bpm="{{ file_status.beat_stats.tempo_bpm if file_status.beat_stats and file_status.beat_stats.tempo_bpm else 0 }}"
          data-total-beats="{{ file_status.beat_stats.total_beats if file_status.beat_stats and file_status.beat_stats.total_beats else 0 }}"
-         data-duration="{{ file_status.beat_stats.duration if file_status.beat_stats and file_status.beat_stats.duration else 0 }}"
+         data-duration="{{ file_status.duration if file_status.duration else 0 }}"
          data-detected-beats-per-bar="{{ file_status.beat_stats.detected_beats_per_bar if file_status.beat_stats and file_status.beat_stats.detected_beats_per_bar else 0 }}"
          data-original-duration="{{ file_status.original_duration if file_status.original_duration else 0 }}"
          data-duration-limit="{{ file_status.duration_limit if file_status.duration_limit else 60 }}"
